Fix text alignment

--- a/src/components/technology/Technology.module.scss
+++ b/src/components/technology/Technology.module.scss
@@ -124,7 +124,7 @@
         }
         @include responsive('large') {
             font-size: $dp-4;
-            tex-align: left;
+            text-align: left;
         }
     }
 
